--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@iarna/toml": "^2.2.5",
+    "aws-sdk": "^2.1415.0",
     "conventional-changelog": "^3.1.25",
     "conventional-recommended-bump": "^6.1.0",
     "git-semver-tags": "4.1.1",
